# esp32test

./: .gitignore  README.md  boo.cpp  esp32.ino
ESP32/: esp32.ino
pc/: CMakeLists.txt  main.cpp
